# HRI-Project

./: .gitignore  README.md  pyproject.toml
HRI – Coding Assignment/: audio_processor.py  main.py  prompt.py
hri/: alpha_mini.py  audio_processor.py  conversation.py  demo.py  language_model.py  main.py  prompt.py
tests/: API_test.py  prompt.py  test.py
