[project]
name = "hri"
version = "0.1.0"
description = ""
authors = [
    {name = "Niclas",email = "n.j.muller-hof@snu.ac.kr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autobahn[serialization,twisted] (>=24.4.2,<25.0.0)",
    "alpha-mini-rug (>=0.7.0,<0.8.0)",
    "pyopenssl (>=25.0.0,<26.0.0)"
]

[tool.poetry]
packages = [{include = "hri", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
